--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,11 @@
         <activity android:name=".ProductActivity" />
         <activity android:name=".CartActivity" />
         <activity android:name=".CheckoutActivity" />
-        <activity android:name=".DeliveryActivity"></activity>
+        <activity android:name=".DeliveryActivity" />
+        <activity android:name=".PaymentActivity" />
+        <activity android:name=".YourTripsActivity" />
+        <activity android:name=".HelpActivity" />
+        <activity android:name=".SettingsActivity"></activity>
     </application>
 
 </manifest>
