--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,9 +24,9 @@
         <activity android:name=".CheckoutActivity" />
         <activity android:name=".DeliveryActivity" />
         <activity android:name=".PaymentActivity" />
-        <activity android:name=".YourTripsActivity" />
         <activity android:name=".HelpActivity" />
-        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".SettingsActivity" />
+        <activity android:name=".YourOrdersActivity"></activity>
     </application>
 
 </manifest>
