--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".Activities.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -18,19 +18,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SearchActivity" />
-        <activity android:name=".ProductActivity" />
-        <activity android:name=".CartActivity" />
-        <activity android:name=".CheckoutActivity" />
-        <activity android:name=".DeliveryActivity" />
+        <activity android:name=".Activities.SearchActivity" />
+        <activity android:name=".Activities.ProductActivity" />
+        <activity android:name=".Activities.CartActivity" />
+        <activity android:name=".Activities.CheckoutActivity" />
+        <activity android:name=".Activities.DeliveryActivity" />
         <activity
-            android:name=".PaymentActivity"
+            android:name=".Activities.PaymentActivity"
             android:label="Payment" />
         <activity
-            android:name=".HelpActivity"
+            android:name=".Activities.HelpActivity"
             android:label="Help" />
         <activity
-            android:name=".SettingsActivity"
+            android:name=".Activities.SettingsActivity"
             android:label="Settings" />
         <activity
             android:name=".YourOrdersActivity"
