--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.android.support:cardview-v7:25.3.1'
-    testCompile 'junit:junit:4.12'
+    compile 'com.github.bumptech.glide:glide:4.0.0-RC0'
     compile 'com.google.android.gms:play-services-maps:11.0.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
+    testCompile 'junit:junit:4.12'
 }
