--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,12 @@ dependencies {
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.github.bumptech.glide:glide:4.0.0-RC0'
-    compile 'com.google.android.gms:play-services-maps:11.0.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
+    compile 'com.google.android.gms:play-services-maps:11.0.1'
+    compile 'com.google.firebase:firebase-database:11.0.1'
+    compile 'com.google.firebase:firebase-auth:11.0.1'
     testCompile 'junit:junit:4.12'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
