--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:11.0.1'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.github.fafaldo:fab-toolbar:1.2.0'
+    compile 'com.google.android.gms:play-services:11.0.1'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
 }
