--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,12 @@
     package="com.uottawa.benjaminmacdonald.quicktings">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+   <permission
+    android:name="com.uottawa.benjaminmacdonald.quicktings.permission.MAPS_RECEIVE"
+    android:protectionLevel="signature"/>
+    <uses-permission android:name="com.uottawa.benjaminmacdonald.quicktings.permission.MAPS_RECEIVE"/>
 
     <application
         android:allowBackup="true"
@@ -10,6 +16,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBfNEOID2D7gydRYLCeTVSAXQOmRIpw87g" />
+
+
         <activity
             android:name=".Activities.MainActivity"
             android:label="@string/app_name"
@@ -64,6 +76,7 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
+
 
     </application>
 
