--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.github.fafaldo:fab-toolbar:1.2.0'
     compile 'com.google.android.gms:play-services:11.0.1'
+    compile 'com.vstechlab.easyfonts:easyfonts:1.0.0'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
 }
