--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
     <permission
         android:name="com.uottawa.benjaminmacdonald.quicktings.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
+    <permission android:name="android.permission.ACCESS_COARSE_LOCATION"
+        android:protectionLevel="signature"/>
+    <permission android:name="android.permission.ACCESS_FINE_LOCATION"
+        android:protectionLevel="signature"/>
 
     <uses-permission android:name="com.uottawa.benjaminmacdonald.quicktings.permission.MAPS_RECEIVE" />
 
