--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     compile 'com.github.fafaldo:fab-toolbar:1.2.0'
     compile 'com.google.android.gms:play-services:11.0.2'
     compile 'com.vstechlab.easyfonts:easyfonts:1.0.0'
+    compile 'com.github.fiskurgit:ChipCloud:3.0.4'
+    compile 'com.google.android:flexbox:0.3.0'
+    compile 'com.stepstone.stepper:material-stepper:3.3.0'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
 }
