--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile 'com.github.fiskurgit:ChipCloud:3.0.4'
     compile 'com.google.android:flexbox:0.3.0'
     compile 'com.stepstone.stepper:material-stepper:3.3.0'
+    compile 'com.airbnb.android:lottie:2.1.0'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
 }
